--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/merriweather": "^5.2.9",
+    "@fontsource/roboto": "^5.2.6",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
